# ascension-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: spritesheet.xcf  tilemap.tmx  tilesheet.xcf
resources/: sprite_sheet_old.xcf  spritesheet.xcf  tilemap.tmx
src/: main.rs
