[package]
name = "game"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
nalgebra = "0.20"
ncollide2d = "0.22"
nphysics2d = "0.14"
tiled = { git = "https://github.com/mattyhall/rs-tiled" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
